--- a/src/views/layouts/nosotros.hbs
+++ b/src/views/layouts/nosotros.hbs
@@ -1,5 +1,6 @@
 {{!-- Inner --}}
 <img src="/img/inner-nosotros-kino.jpg" alt="" class="inner__nos">
+<img src="/img/inner-nosotros-kino-mob.jpg" alt="" class="inner__mob">
 {{!-- Fin Inner --}}
 
 {{!-- Title --}}
