--- a/src/views/layouts/servicios.hbs
+++ b/src/views/layouts/servicios.hbs
@@ -1,5 +1,6 @@
 {{!-- Inner --}}
 <img src="/img/inner-servicios-kino.jpg" alt="" class="inner__con">
+<img src="/img/inner-servicios-kino-mob.jpg" alt="" class="inner__mob">
 {{!-- Fin Inner --}}
 
 {{!-- Title --}}
