--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -9,8 +9,8 @@
     <meta property="og:description"
         content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicaciones y desarrollo web">
     <meta property="og:type" content="Web">
-    <meta property="og:url" content="https://www.k1n0.com/">
-    <meta property="og:image" content="https://www.k1n0.com/">
+    <meta property="og:url" content="https://www.k1n0.com.co/">
+    <meta property="og:image" content="https://www.k1n0.com.co/">
     <meta property="og:local" content="es_LA">
     {{!-- SEO --}}
     <meta name="description"
