--- a/src/public/css/estilos.css
+++ b/src/public/css/estilos.css
@@ -743,6 +743,26 @@ a:hover {
   }
 }
 @media (min-width: 375px) and (max-width: 409px) {
+  .carousel__desk {
+    display: none;
+  }
+
+  .carousel__mob {
+    display: block;
+  }
+
+  .backg {
+    display: none;
+  }
+
+  .backg__mobile {
+    display: block;
+    width: 100%;
+    opacity: 20%;
+    position: absolute;
+    z-index: 0;
+  }
+
   .intro {
     position: relative;
     text-align: center;
@@ -765,6 +785,26 @@ a:hover {
   }
 }
 @media (min-width: 410px) and (max-width: 539px) {
+  .carousel__desk {
+    display: none;
+  }
+
+  .carousel__mob {
+    display: block;
+  }
+
+  .backg {
+    display: none;
+  }
+
+  .backg__mobile {
+    display: block;
+    width: 100%;
+    opacity: 20%;
+    position: absolute;
+    z-index: 0;
+  }
+
   .intro {
     position: relative;
     text-align: center;
@@ -787,6 +827,26 @@ a:hover {
   }
 }
 @media (min-width: 540px) and (max-width: 767px) {
+  .carousel__desk {
+    display: none;
+  }
+
+  .carousel__mob {
+    display: block;
+  }
+
+  .backg {
+    display: none;
+  }
+
+  .backg__mobile {
+    display: block;
+    width: 100%;
+    opacity: 20%;
+    position: absolute;
+    z-index: 0;
+  }
+
   .intro {
     position: relative;
     text-align: center;
