--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -31,6 +31,16 @@
     <link rel="stylesheet" href="/css/estilos.css">
     {{!-- Favicon --}}
     <link rel="icon" type="image/ico" href="/img/favicon-ico-kino.ico">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JLP0S9FLPD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-JLP0S9FLPD');
+    </script>
 </head>
 
 <body>
