--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -12,6 +12,7 @@
     <meta property="og:url" content="https://www.k1n0.com.co/">
     <meta property="og:image" content="https://www.k1n0.com.co/img/logo-black-png.png">
     <meta property="og:local" content="es_LA">
+    <meta name="google-site-verification" content="Ljsin1yVzfgxv31NsdVzUlObTNPOn-RHEMomyfNrA1E" />
     {{!-- SEO --}}
     <meta name="description"
         content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicación digital a la medida">
