--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http--equiv="X-UA-Compatible" content="ie=edhge">
     {{!-- Propiedades OG --}}
     <meta property="og:title" content="k1n0c0m | Servicios web y comunicaciones en Medellín">
     <meta property="og:description"
@@ -18,6 +19,7 @@
         content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicación digital a la medida">
     <meta name="keywords"
         content="servicios web, desarrollo web, comunicaciones, publicidad, comunicacion digital, posicionamiento, seo">
+    <meta name="author" content="k1n0">
     {{!-- Título --}}
     <title>K1n0.c0m | Servicios web y comunicaciones en Medellín</title>
     {{!-- Google Font --}}
