--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -3,22 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http--equiv="X-UA-Compatible" content="ie=edhge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http--equiv="X-UA-Compatible" content="ie=edhge" />
     {{!-- Propiedades OG --}}
-    <meta property="og:title" content="k1n0c0m | Servicios web y comunicaciones en Medellín">
+    <meta property="og:title" content="k1n0c0m | Servicios web y comunicaciones en Medellín" />
     <meta property="og:description"
-        content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicaciones y desarrollo web">
-    <meta property="og:type" content="Web">
-    <meta property="og:url" content="https://www.k1n0.com.co/">
-    <meta property="og:image" content="https://www.k1n0.com.co/img/logo-black-png.png">
-    <meta property="og:local" content="es_LA">
+        content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicaciones y desarrollo web" />
+    <meta property="og:type" content="Web" />
+    <meta property="og:url" content="https://www.k1n0.com.co/" />
+    <meta property="og:site_name" content="k1n0c0m" />
+    <meta property="og:image" content="https://www.k1n0.com.co/img/logo-black-png.png" />
+    <meta property="og:local" content="es_LA" />
     <meta name="google-site-verification" content="Ljsin1yVzfgxv31NsdVzUlObTNPOn-RHEMomyfNrA1E" />
     {{!-- SEO --}}
     <meta name="description"
-        content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicación digital a la medida">
+        content="k1n0c0m | Servicios web y comunicaciones en Medellín | Comunicación digital a la medida" />
     <meta name="keywords"
-        content="servicios web, desarrollo web, comunicaciones, publicidad, comunicacion digital, posicionamiento, seo">
+        content="servicios web, desarrollo web, comunicaciones, publicidad, comunicacion digital, posicionamiento, seo" />
     <meta name="author" content="k1n0">
     {{!-- Título --}}
     <title>K1n0.c0m | Servicios web y comunicaciones en Medellín</title>
